--- a/src/hooks/hooks.css
+++ b/src/hooks/hooks.css
@@ -1,6 +1,7 @@
-p{
-    margin: 0;
+p, h5{
+    margin: 3px;
     padding: 0;
+    font-size: 12px;
 }
 h3{
     background-color: bisque;
@@ -19,3 +20,34 @@ h5{
 /* hr{
     border-bottom: dashed   1px black;
 } */
+
+.error{
+    font-weight: bold;
+    color: red;
+}
+
+.scroll ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    overflow: hidden;
+    width: 30vw;
+}
+.scroll ul li {
+    border: 1px solid blueviolet;
+    margin-top: 5px;
+}
+
+.contextApp{
+    height: 60px;
+    width: 200px;
+    border: 1px solid black;
+    padding: 10px;
+}
+
+.todoDiv{
+    height: auto;
+    width: 200px;
+    border: 1px solid black;
+}
